# sysadmin-portfolio

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
1-sysadmin-toolkit/: README.md  __init__.py
1-sysadmin-toolkit/scripts/: log-cleanup.sh  system-report.sh
1-sysadmin-toolkit/toolkit/: __init__.py  __main__.py  cli.py  disk_analyzer.py  log_analyzer.py  models.py  service_manager.py  system_health.py
2-infra-monitoring/: README.md  docker-compose.yml
2-infra-monitoring/alertmanager/: alertmanager.yml
2-infra-monitoring/blackbox/: blackbox.yml
2-infra-monitoring/grafana/dashboards/: docker-overview.json  network-overview.json  server-health.json
2-infra-monitoring/grafana/provisioning/dashboards/: dashboards.yml
2-infra-monitoring/grafana/provisioning/datasources/: datasources.yml
2-infra-monitoring/prometheus/: prometheus.yml
2-infra-monitoring/prometheus/alerts/: alerts.yml
3-network-health-checker/: __init__.py
3-network-health-checker/network_tools/: __init__.py
4-m365-admin-scripts/: README.md
4-m365-admin-scripts/common/: Connect-M365.ps1
4-m365-admin-scripts/groups/: Get-M365Groups.ps1
4-m365-admin-scripts/licenses/: Get-M365Licenses.ps1
4-m365-admin-scripts/reports/: Get-M365InactiveUsers.ps1
4-m365-admin-scripts/users/: Get-M365Users.ps1
5-backup-automation/: README.md  __init__.py
5-backup-automation/backup_manager/: __init__.py  manager.py  models.py  retention.py  verifier.py
5-backup-automation/config/: backup-config.example.json
5-backup-automation/scripts/: backup-files.sh
6-homelab-docs/: README.md
6-homelab-docs/architecture/: network-architecture.md
6-homelab-docs/inventory/: servers.md
6-homelab-docs/runbooks/: incident-response.md
6-homelab-docs/templates/: change-request.md
network_health_checker/: __init__.py  __main__.py  cli.py  config.py  models.py
network_health_checker/network_tools/: __init__.py  dns_lookup.py  network_info.py  ping_monitor.py  port_scanner.py  snmp_query.py  subnet_calculator.py
tests/: conftest.py  test_dns_lookup.py  test_network_info.py  test_ping_monitor.py  test_port_scanner.py  test_snmp_query.py  test_subnet_calculator.py
tests/test_backup_automation/: __init__.py  test_manager.py  test_models.py
tests/test_sysadmin_toolkit/: __init__.py  test_disk_analyzer.py  test_log_analyzer.py  test_models.py  test_service_manager.py  test_system_health.py
